Bug 1281402 - Uplift cubeb to revision 9a1d6ccd2. r=kinetik

MozReview-Commit-ID: 36jF493k7XW

--HG--
extra : rebase_source : ce0e2bf4c0a8ae671e0633b17a4339b9bea2e3b8